syntax = "proto3";

package api;

option go_package = "./api";


message Message {
    string user = 1;
    string content = 2;
}

message JoinMessage {
    string user = 1;
}

message RetrieveMessage {
    string user = 1;
}

message ReleaseMessage {
    string user = 1;
}

message ResponseMessage {
    string message = 1;
}

message Empty {
}

service Peer {
    rpc Broadcast (Message) returns (Empty);
    rpc Join (JoinMessage) returns (stream Message);

    rpc Retrieve(RetrieveMessage) returns (ResponseMessage);
    rpc Release(ReleaseMessage) returns (ResponseMessage);
}

