syntax = "proto3";
package chat;
option go_package = "./chat";


message Message {
    string user = 1;
    string content = 2;
}

message JoinMessage {
    string user = 1;
}

message Empty {
}

service ChatService {
    rpc Broadcast (Message) returns (Empty);
    rpc Join (JoinMessage) returns (stream Message);
    rpc Publish (Message) returns (Empty);
}